# Init

./: .gitattributes  .gitignore  README.md
Test/: CMakeLists.txt
resources/: config.json  needed_dirs.txt
resources/configs/: config_cpp.json  cpp.json  cpp_glfw_win.json  cpp_linux.json  cpp_opengl_linux.json  cpp_opengl_win.json  cpp_win.json  py.json
resources/files/: main.cpp
resources/files/c++/: CMakeLists.txt  CMakePresets.json  launch.json
resources/files/c++/GLAD/glad/: glad.h
resources/files/c++/GLAD/src/: glad.c
resources/files/c++/GLFW/lib/: glfw3.lib
resources/files/c++/GLFW/src/: main_glfw.cpp
resources/files/c++/configs/: CMakeLists.txt  GLFW_CMakeLists.txt  Linux_CMakePresets.json  Windows_CMakePresets.json
resources/files/c++/default/configs/: .Linux_CMakePresets.json.swp  .Windows_CMakePresets.json.swp
resources/files/c++/opengl/configs/: CMakeLists.txt
resources/files/c++/src/: main.cpp  main_glfw.cpp
resources/files/c++/tests/: test.cpp
src/: cppinit.py  initializer.py  p_init.py
src/initializer/: __init__.py  initializer.py
